--- a/productDetail.html
+++ b/productDetail.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Puzzle Store</title>
-    <link rel="stylesheet" type="text/css" href="productDetail.css">
+    <link rel="stylesheet" type="text/css" href="css/productDetail.css">
 </head>
 <body>
     <div class="header">
@@ -153,6 +153,7 @@
     </div>
 
 
-    <script src="productDetail.js""></script>
+    <script src="js/productDetail.js""></script>
 </body>
+
 </html>
